Fixed spacing

--- a/assets/css/scss/_test-two.scss
+++ b/assets/css/scss/_test-two.scss
@@ -1,5 +1,8 @@
 .test-two {
     padding: 100px 0;
+    @include col-sm {
+        padding: 40px 0;
+    }
     .title {
         font-size: 40px;
         font-weight: 700;
@@ -11,11 +14,19 @@
     .cards {
         margin-top: 100px;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
         column-gap: 64px;
         row-gap: 64px;
         @include tablet {
+            column-gap: 32px;
+            row-gap: 32px;
+        }
+        @include col-sm {
+            margin-top: 40px;
+        }
+        @include small-mobile {
             column-gap: 16px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         }
         .card {
             height: 100%;
@@ -31,8 +42,6 @@
             }
             .body {
                 padding: 24px 16px;
-                display: flex;
-                flex-direction: column;
                 height: 100%;
                 .title {
                     font-size: 22px;
@@ -40,9 +49,6 @@
                 p {
                     margin: 0;
                     margin-bottom: 16px;
-                }
-                .primary-button {
-                    margin-top: auto;
                 }
             }
         }
