--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,11 @@ footer .container .logo {
 .test-two {
   padding: 100px 0;
 }
+@media only screen and (max-width: 575px) {
+  .test-two {
+    padding: 40px 0;
+  }
+}
 .test-two .title {
   font-size: 40px;
   font-weight: 700;
@@ -123,13 +128,25 @@ footer .container .logo {
 .test-two .cards {
   margin-top: 100px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   column-gap: 64px;
   row-gap: 64px;
 }
 @media only screen and (max-width: 767px) {
   .test-two .cards {
+    column-gap: 32px;
+    row-gap: 32px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .test-two .cards {
+    margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 479px) {
+  .test-two .cards {
     column-gap: 16px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
 .test-two .cards .card {
@@ -147,8 +164,6 @@ footer .container .logo {
 }
 .test-two .cards .card .body {
   padding: 24px 16px;
-  display: flex;
-  flex-direction: column;
   height: 100%;
 }
 .test-two .cards .card .body .title {
@@ -157,9 +172,6 @@ footer .container .logo {
 .test-two .cards .card .body p {
   margin: 0;
   margin-bottom: 16px;
-}
-.test-two .cards .card .body .primary-button {
-  margin-top: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
